stage-openebs.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: stage-openebs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : stage-openebs
    spec:
      containers:
        - name: stage-openebs
          image: index.docker.io/avneetsingh/openebs-website:18861a
          imagePullPolicy: Always
          ports:
          - containerPort: 80
      imagePullSecrets:
      - name: mayadatasecret2

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stage-openebs
  name: stage-openebs-service
spec:
  type: NodePort
  ports:
  - name: stage-openebs
    port: 80
    protocol: TCP
  selector:
    app: stage-openebs
