stage-openebs-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stage-openebs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stage-demo-amriship
  labels:
    app: stage-openebs
spec:
  backend:
    serviceName: stage-openebs
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stage-openebs
  labels:
    app: stage-openebs
spec:
  type: NodePort
  selector:
    app: stage-openebs
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
